package project.dorce.datasetmanager;

import org.springframework.data.domain.Page;
import org.springframework.data.domain.Pageable;
import org.springframework.data.jpa.repository.JpaRepository;

import java.util.UUID;

public interface DataRelatedRequestRepository extends JpaRepository<DataRelatedRequest, UUID> {
    Page<DataRelatedRequest> findByDataset(Dataset dataset, Pageable pageable);
}
